<resources>
    <string name="app_name">Instgram Clone</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="enter_email">Please enter an email...</string>
    <string name="enter_user">Please enter an username...</string>
    <string name="enter_password">Please enter a password...</string>
    <string name="content_description">Instagram Clone Logo</string>
    <!-- Profile Tab -->
    <string name="enter_profile_name">Please enter a profile name</string>
    <string name="enter_bio">Please enter your bio</string>
    <string name="enter_profession">Please enter your profession</string>
    <string name="enter_hobbies">Please enter your hobbies</string>
    <string name="enter_sports">Please enter your favourite sport</string>
    <string name="update_button">Update Info</string>
    <!-- Users Tab -->
    <string name="txt_loading_user">Loading Users... Please wait</string>
    <!-- Shared Picture Tab -->
    <string name="picture_description">Beach View</string>
    <string name="enter_caption">Enter caption...</string>
    <string name="share_button">Share Image</string>
    <!-- my_menu -->
    <string name="post_image_item">Post Image</string>
    <string name="logout_user_item">Logout</string>
</resources>